Implement login system with sessions and cookies

--- a/MVC_PrintSystem/Views/Students/Dashboard.cshtml
+++ b/MVC_PrintSystem/Views/Students/Dashboard.cshtml
@@ -18,6 +18,10 @@ else
 }
 
 <p>
-    <a class="btn btn-primary" href="@Url.Action("PayOnline", "Students")">Top Up Account</a>
-    <a class="btn btn-secondary" href="@Url.Action("History", "Students")">View Payment History</a>
+    <a class="btn btn-primary" href="@Url.Action("PayOnline", "Students")">
+        <i class="fas fa-credit-card"></i> Top Up Account
+    </a>
+    <a class="btn btn-secondary" href="@Url.Action("PaymentHistory", "Students")">
+        <i class="fas fa-history"></i> Payment History
+    </a>
 </p>
